--- a/_posts/2021-04-01-DATN.md
+++ b/_posts/2021-04-01-DATN.md
@@ -33,7 +33,7 @@ image: /img/DATN/model.png
 
 ## 2. Chuẩn bị dữ liệu
 
-{% include message.html type="is-warning" content="Download dữ liệu tại <a href='https://drive.google.com/file/d/1iYhwA9zTVz6qtfM-tpNlkRhuwxPcWnPr/view?usp=sharing'>đây</a>" %}
+{% include message.html type="is-link" content="Download dữ liệu tại <a href='https://drive.google.com/file/d/1iYhwA9zTVz6qtfM-tpNlkRhuwxPcWnPr/view?usp=sharing'>đây</a>" %}
 
 ### Clone github về local machine của mình:
 
@@ -115,7 +115,9 @@ with h5py.File(args.output,'w') as F:
 python3 make_data_and_preprocessing/make_data/make_data/make_data.py --working . --output train_data_100.h5
 ```
 
-Sau khi chạy xong, ta có file `train_data_100.h5` là file lưu dataset trực tiếp dưới dạng numpy array, tiện để load lên dùng lại nhiều lần trong lúc train. **Lưu ý, với các dataset cực lớn thì lưu trực tiếp vào h5py sẽ không có lợi, thậm chí không chạy được vì không đủ RAM, khi đó ta sẽ dùng các cách khác để load dataset theo từng phần nhỏ trong lúc huấn luyện**
+Sau khi chạy xong, ta có file `train_data_100.h5` là file lưu dataset trực tiếp dưới dạng numpy array, tiện để load lên dùng lại nhiều lần trong lúc train. 
+
+{% include message.html type="is-warning" content="<b>Lưu ý, với các dataset cực lớn thì lưu trực tiếp vào h5py sẽ không có lợi, thậm chí không chạy được vì không đủ RAM, khi đó ta sẽ dùng các cách khác để load dataset theo từng phần nhỏ trong lúc huấn luyện</b>" %}
 
 ---
 
