--- a/_posts/2021-09-15-wsl2.md
+++ b/_posts/2021-09-15-wsl2.md
@@ -1,16 +1,16 @@
 ---
 layout: post
 date: 2021-09-15 07:00:07
-image: /img/ubuntu_on_window/ava.png
 tags: sharing ubuntu window
 hero_height: is-small
-comments: true
+comments: false
 toc: true
 show_sidebar: true
 title: Dùng Ubuntu trên Window một cách dễ dàng
 description: Dùng Ubuntu trên Window một cách dễ dàng
 summary: |-
     Developing on Window is not a struggle thing anymore with the Linux environment. Besides, by using simutaneously 2 OS, you have all of the benefits of both environment, for example Linux for developing, Window for officing and gaming or somethings else ...
+image: /img/ubuntu_on_window/ava.png
 ---
 
 Lập trình trên Window không còn khó khăn gì nữa nhờ môi trường Linux giờ đã có thể chạy như một phần mềm trong Window. Bên cạnh đó, bằng việc dùng song song 2 hệ điều hành, bạn được tất cả lợi ích của cả hai, ví dụ phát triển phần mềm dễ chịu với Linux và làm công việc văn phòng hay chơi game trên Window.
