--- a/_posts/2020-05-20-DATN.md
+++ b/_posts/2020-05-20-DATN.md
@@ -3,7 +3,7 @@ layout: post
 date: 2020-05-20 07:00:00
 tags: projects deep-learning computer-vision
 hero_height: is-small
-comments: true
+comments: false
 toc: true
 menubar: 
 show_sidebar: true
