--- a/_posts/2021-09-15-wsl2.md
+++ b/_posts/2021-09-15-wsl2.md
@@ -3,7 +3,7 @@ layout: post
 date: 2021-09-15 07:00:07
 tags: sharing ubuntu window
 hero_height: is-small
-comments: false
+comments: true
 toc: true
 show_sidebar: true
 title: Dùng Ubuntu trên Window một cách dễ dàng
