--- a/_posts/2020-05-20-DATN.md
+++ b/_posts/2020-05-20-DATN.md
@@ -70,7 +70,7 @@ Classification
 
 ### Tiền xử lí và đóng gói dữ liệu:
 
-Mở file `Classification/make_data_and_preprocessing/make_data/make_data/make_data.py` để xem các đoạn code, mình sẽ giải thích một số đoạn, để đơn giản, các bạn chỉ cần chạy script như cuối phần này
+Mở file `Classification/make_data_and_preprocessing /make_data/make_data/make_data.py` để xem các đoạn code, mình sẽ giải thích một số đoạn, để đơn giản, các bạn chỉ cần chạy script như cuối phần này
 
 * Resize và normalize:
 
