--- a/_posts/2021-09-16-docker-wsl2.md
+++ b/_posts/2021-09-16-docker-wsl2.md
@@ -7,24 +7,24 @@ hero_height: is-small
 comments: true
 toc: true
 show_sidebar: true
-title: Docker on Window with WSL2
-description: Docker on Window with WSL2
+title: Dùng Docker trên Window với WSL2
+description: Docker trên Window với WSL2
 summary: |-
     If you are a fan of Docker Command because of the consistency through various environment and OS, you love typing command on terminal or you like to develop and write documentation for other developer, this article is for you...
 ---
 
 ## Introduction
 
-Normally, Window users use Docker through an application called **Docker Desktop**. It has GUI, it seem to be friendly with user. 
+Thông thường, người dùng Docker trên Window có thể sử dụng phần mềm **Docker Desktop**. Nó có GUI và trông thân thiện với người dùng.
 
 <div class="block has-text-centered">
     <figure>
     <img src="/img/docker-wsl2/dockerfordesktop.png">
-    <figcaption>Fig.1: GUI of Docker Desktop</figcaption>
+    <figcaption>Fig.1: GUI của Docker Desktop</figcaption>
     </figure>
 </div>
 
-But if you are a fan of [**Docker Command**](https://docs.docker.com/engine/reference/commandline/cli/) because of the consistency through various environment and OS, you love typing command on terminal or you like to develop and write documentation for other developer, this article is for you.
+Nhưng nếu bạn là một người thích dùng [**Docker Command**](https://docs.docker.com/engine/reference/commandline/cli/) vì tính thống nhất qua nhiều môi trường và hệ điều hành, bạn thích gõ command trên terminal hơn hay bạn thích dev và viết documentation lại cho các developer khác. Hãy đọc bài này!
 
 <div class="block has-text-centered">
     <figure>
@@ -33,15 +33,16 @@ But if you are a fan of [**Docker Command**](https://docs.docker.com/engine/refe
     </figure>
 </div>
 
-In this article, I would like to share how to install Docker directly in your WSL2 distribution and use Docker command like the way we use Docker on a Linux machine or Macbook terminal.
+Trong bài này, mình sẽ chia sẻ cách cài đặt Docker trực tiếp trên WSL2(Window Subsystem for Linux) distro của máy Window và sau đó bạn có thể dùng Docker command giống như cách bạn hay dùng trên máy Linux hoặc Macbook terminal.
 
-{% include message.html type="is-link" header="FYI" content="Read <a href='/2021/09/15/wsl2/'>this article</a> about the installation of WSL2 on Window" %}
 
-## Install Docker step by step
+{% include message.html type="is-link" header="Thông tin" content="Đọc <a href='/2021/09/15/wsl2/'>bài này</a> để biết cách cài đặt WSL2 trong Window" %}
 
-Now let go to your Linux distro terminal
+## Cài đặt Docker, step by step
 
-* Install the repository and some dependencies:
+Bây giờ hãy bật terminal của Linux distro trong máy bạn lên và làm các bước ở dưới
+
+* Cài đặt repository và các package cần thiết:
 
 ```bash
 sudo apt-get update
@@ -51,20 +52,20 @@ curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
 sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
 ```
 
-* Now install docker, `ubuntu` is my username when installing WSL2, modify it to yours
+* Cài đặt docker, `ubuntu` là username của mình đặt khi mới cài WSL2, sửa nó lại thành username của bạn
 
 ```bash
 sudo apt-get update
 sudo apt-get install docker-ce
 ```
 
-* Add my default user to group Docker so that I don't need `sudo` to use Docker everytime
+* Thêm default user (sửa `ubuntu` thành của bạn) vào nhóm Docker để không cần phải `sudo` mỗi khi muốn dùng Docker nữa
 
 ```bash
 sudo usermod -aG docker ubuntu
 ```
 
-* Make the change affect, change `ubuntu` to your username, same with previous step
+* Làm cho các thay đổi có hiệu lực, một lần nữa như 2 bước trên, sửa `ubuntu` thành của bạn
 
 ```bash
 sudo su
@@ -74,13 +75,13 @@ sudo su
 su ubuntu
 ```
 
-* Now Docker is ready to use, last but not least step, start the Docker service
+* Bây giờ Docker đã sẵn sàng, bước cuối cùng, khởi động Docker service
 
 ```bash
 sudo service docker start
 ```
 
-It's great to see a result like this
+Ra được kết quả màn hình như dưới là tốt, bạn không gặp phải lỗi gì khi cài đặt
 
 <div class="block has-text-centered">
     <figure>
@@ -89,16 +90,16 @@ It's great to see a result like this
     </figure>
 </div>
 
-* Check again to make sure docker is ready
+* Kiểm tra lại để chắc chắn docker đã được cài đặt đúng
 
 ```bash
 docker ps -a
 ```
-If you see result like this, you can start using Docker command
+Nếu kết quả như dưới, docker đã sẵn sàng được sử dụng
 
 <div class="block has-text-centered">
     <figure>
     <img src="/img/docker-wsl2/makesure.png">
-    <figcaption>Fig.4: List all docker images</figcaption>
+    <figcaption>Fig.4: Hiện ra tất cả docker images</figcaption>
     </figure>
 </div>
