--- a/_posts/2021-09-16-docker-wsl2.md
+++ b/_posts/2021-09-16-docker-wsl2.md
@@ -10,7 +10,7 @@ show_sidebar: true
 title: Dùng Docker trên Window với WSL2
 description: Docker trên Window với WSL2
 summary: |-
-    If you are a fan of Docker Command because of the consistency through various environment and OS, you love typing command on terminal or you like to develop and write documentation for other developer, this article is for you...
+    Nếu bạn là một người thích dùng Docker Command vì tính thống nhất qua nhiều môi trường và hệ điều hành, bạn thích gõ command trên terminal hơn hay bạn thích dev và viết documentation lại cho các developer khác. Hãy đọc bài này!...
 ---
 
 ## Introduction
